[gd_scene load_steps=11 format=3 uid="uid://bpy071ovoevnq"]

[ext_resource type="Theme" uid="uid://djf2yc1tmc0u8" path="res://ui/themes/control_theme_main_menu.tres" id="1_1lcqw"]
[ext_resource type="Script" uid="uid://bn7hgaa71swpl" path="res://levels/main_menu.gd" id="1_3vdg5"]
[ext_resource type="AudioStream" uid="uid://cbowxug2pgc4y" path="res://music/MenuRock.mp3" id="2_60dqb"]
[ext_resource type="Texture2D" uid="uid://dwo00a3vqhcou" path="res://icon.svg" id="3_tkm84"]
[ext_resource type="Texture2D" uid="uid://dp0yqs3ec4c18" path="res://terrain/sky-tile.png" id="4_pppj1"]
[ext_resource type="Script" uid="uid://dsphnlf4hpu7y" path="res://levels/mainmenu_level_select.gd" id="4_ryopc"]
[ext_resource type="VideoStream" uid="uid://vnivder7uust" path="res://videos/main_menu.ogv" id="5_6flho"]
[ext_resource type="PackedScene" uid="uid://8u74efql1hxt" path="res://ui/ar_confirmation_dialog.tscn" id="6_ofye2"]
[ext_resource type="PackedScene" uid="uid://da23m08ml50op" path="res://ui/options_menu.tscn" id="6_snioo"]
[ext_resource type="PackedScene" uid="uid://drs0e27vsvk42" path="res://ui/project_version_label.tscn" id="8_7ty7c"]

[node name="MainMenu" type="Node2D" node_paths=PackedStringArray("revealables")]
script = ExtResource("1_3vdg5")
revealables = [NodePath("Controls/MainMenu/Columns/CenterColumn/MainMenuHeader"), NodePath("Controls/MainMenu/Columns/RightColumn/CreditsHeader"), NodePath("Controls/MainMenu/Columns/RightColumn/CreditsList")]

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_60dqb")
volume_db = -8.0
bus = &"Music"
parameters/looping = true

[node name="Controls" type="Control" parent="."]
texture_filter = 6
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_1lcqw")

[node name="FullBackgroundImage" type="TextureRect" parent="Controls"]
visible = false
modulate = Color(0.64, 0.64, 0.64, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("4_pppj1")

[node name="VideoContainer" type="AspectRatioContainer" parent="Controls"]
modulate = Color(0.490196, 0.490196, 0.490196, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment_horizontal = 0
alignment_vertical = 0

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="Controls/VideoContainer"]
layout_mode = 2
stream = ExtResource("5_6flho")
volume_db = -80.0
autoplay = true
loop = true

[node name="MainMenu" type="VBoxContainer" parent="Controls"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ARConfirmationDialog" parent="Controls/MainMenu" instance=ExtResource("6_ofye2")]
unique_name_in_owner = true

[node name="TopSpacer" type="Control" parent="Controls/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Columns" type="HBoxContainer" parent="Controls/MainMenu"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="Controls/MainMenu/Columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="LeftColumn" type="VBoxContainer" parent="Controls/MainMenu/Columns"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="Controls/MainMenu/Columns/LeftColumn"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Controls/MainMenu/Columns/LeftColumn/PanelContainer"]
layout_mode = 2
texture = ExtResource("3_tkm84")
expand_mode = 5
stretch_mode = 6

[node name="Spacer2" type="Control" parent="Controls/MainMenu/Columns"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.13

[node name="CenterColumn" type="VBoxContainer" parent="Controls/MainMenu/Columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpacerTop" type="Control" parent="Controls/MainMenu/Columns/CenterColumn"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="MainMenuHeader" type="Label" parent="Controls/MainMenu/Columns/CenterColumn"]
custom_minimum_size = Vector2(546, 0)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Artillery Rampage"

[node name="Divider" type="HSeparator" parent="Controls/MainMenu/Columns/CenterColumn"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Controls/MainMenu/Columns/CenterColumn"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_stretch_ratio = 0.13

[node name="MarginContainer" type="MarginContainer" parent="Controls/MainMenu/Columns/CenterColumn"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_right = 48

[node name="MainMenuButtons" type="VBoxContainer" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayNow" type="Button" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Arcade mode"
focus_next = NodePath("../ContinueStory")
focus_previous = NodePath("../Quit")
theme_type_variation = &"BigButton"
text = "Play Now!"

[node name="Spacer2" type="Control" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
layout_mode = 2

[node name="ContinueStory" type="Button" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Continue your Story progress"
focus_next = NodePath("../Story")
focus_previous = NodePath("../PlayNow")
theme_type_variation = &"BigButton"
disabled = true
text = "Continue Story"

[node name="Story" type="Button" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
layout_mode = 2
tooltip_text = "New Story mode"
focus_next = NodePath("../LevelSelect")
focus_previous = NodePath("../ContinueStory")
theme_type_variation = &"BigButton"
text = "New Story"

[node name="Spacer3" type="Control" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
layout_mode = 2

[node name="LevelSelect" type="Button" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
layout_mode = 2
focus_next = NodePath("../Options")
focus_previous = NodePath("../Story")
theme_type_variation = &"BigButton"
text = "Select Level"

[node name="Options" type="Button" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
layout_mode = 2
tooltip_text = "Change your game options"
focus_next = NodePath("../Quit")
focus_previous = NodePath(".")
theme_type_variation = &"BigButton"
text = "Options"

[node name="Spacer" type="Control" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_stretch_ratio = 0.13

[node name="Quit" type="Button" parent="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Exit the game"
focus_next = NodePath("../PlayNow")
focus_previous = NodePath("../Options")
theme_type_variation = &"BigButton"
text = "Quit"

[node name="SpacerBottom" type="Control" parent="Controls/MainMenu/Columns/CenterColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer3" type="Control" parent="Controls/MainMenu/Columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.13

[node name="RightColumn" type="VBoxContainer" parent="Controls/MainMenu/Columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="Controls/MainMenu/Columns/RightColumn"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="CreditsHeader" type="Label" parent="Controls/MainMenu/Columns/RightColumn"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Credits"
horizontal_alignment = 1

[node name="CreditsList" type="RichTextLabel" parent="Controls/MainMenu/Columns/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Project Lead: Justin Montgomery
Weapons System Lead: Michael Avrie

CONTRIBUTORS:
Dan Dela Rosa
Christer Kaitila
Vaan Hope Khani:
Matt Ayme
Rodrigo Bonzerr S. Lopez
George Carter
Michael Tanner
Owen \"Q-Bit\"
Chris DeLeon

DETAILED CREDITS:
Justin Montgomery: Project lead, core gameplay, terrain (including procedural generation, destruction, fragmentation, randomization, smoothing), object damage and shattering, story mode systems, shop and upgrades with resources, shot mechanics including wind impact, tank gravity, spawning, difficulties, turn management, damage behaviors (wobble etc), AI opponents (including all major behavioral variations, names), water, save/load, gameplay timer, announcer one liners script and voiceover, bloom/nuke shaders, most edge modes (wrap, accelerate, sticky, none), round grading, game over detection, simultaneous fire mode improvements, additional weapon tuning, desert level, physics tuning, memory leak repairs, numerous bug fixes and contribution integration

Michael Avrie: Weapons Systems Lead (types, selection, explosions, nuke, flares, missiles, EMP, stats, upgrades), UI Lead (typing reveal, scrolling, ammo, tooltips, healthbars, options, key remap, pause logs, fine aiming, story map improvements, loading screen, upgrade screen additions), snowcaps level music, level design (snowy mountain, plateau, islands, divide, plains, factory), narrative randomization, theming and UI design (main menu, options, story sequence, tooltips, font), day/night, enemy units, pickup helicopter, sounds (turn change, most weapons, tank destroyed, rain), dust/smoke/rubble, wind and weather, simultaneous fire mode, action queue system, assorted audio integration, internal documentation, terrain depth tint, bouncing mode, bug fixes, terrain chunk fading, light balancing, various tuning

Dan Dela Rosa: House destructibility, laser visual and main functionality, weapon cycle key, laser variants, effect optimizations, laser wrap/elastic handling

Christer Kaitila: Trajectory dots, UI backgrounds, HUD icons, terrain textures and related support, scrolling sky, rock music for menu, announcer voices, explosion sprites, terrain outlines and crusts, artillery sprites, grass, ground burn, graphics fixes

Vaan Hope Khani: Elastic wall, sounds (small/medium explosions, laser, round win/loss, round start), additional sound integration

Matt Ayme: Parachute defense item (sprite and functionality), boat

Rodrigo Bonzerr S. Lopez: Environment sprites (missiles with variations, tree, rock with variations), game over and retry screens

George Carter: Lightning system (first pass), burst ammo bug fix

Michael Tanner: Pause menu with Main Menu exit

Owen \"Q-Bit\" Good: Lighthouse sprite

Chris DeLeon: Tree variant sprite

Playtesters: Meatball, kittykatmeowmeow

Made with the Godot Engine. See godotengine.org/license for license details"
shortcut_keys_enabled = false
threaded = true
visible_characters_behavior = 1

[node name="Spacer2" type="Control" parent="Controls/MainMenu/Columns/RightColumn"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="ProjectVersionLabel" parent="Controls/MainMenu/Columns/RightColumn" instance=ExtResource("8_7ty7c")]
layout_mode = 2
horizontal_alignment = 2
vertical_alignment = 2

[node name="Spacer4" type="Control" parent="Controls/MainMenu/Columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="BottomSpacer" type="Control" parent="Controls/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="LevelSelect" type="PanelContainer" parent="Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_ryopc")
levels_folders_paths = Array[String](["res://levels"])

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/LevelSelect"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Controls/LevelSelect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13

[node name="Label" type="Label" parent="Controls/LevelSelect/VBoxContainer"]
layout_mode = 2
text = "Level Select"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/LevelSelect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopSpacer" type="Control" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13

[node name="ScrollContainer" type="ScrollContainer" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Buttons" type="VBoxContainer" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MiddleSpacer" type="Control" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13

[node name="ConfirmButtons" type="HBoxContainer" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Start Selected Level"

[node name="Cancel" type="Button" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Cancel"

[node name="BottomSpacer" type="Control" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13

[node name="Spacer2" type="Control" parent="Controls/LevelSelect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="BoxContainer" type="BoxContainer" parent="Controls/LevelSelect/VBoxContainer"]
layout_mode = 2

[node name="Options" type="PanelContainer" parent="Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionsMenu" parent="Controls/Options" instance=ExtResource("6_snioo")]
layout_mode = 2

[connection signal="pressed" from="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons/PlayNow" to="." method="_on_play_now_pressed"]
[connection signal="pressed" from="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons/ContinueStory" to="." method="_on_continue_story_pressed"]
[connection signal="pressed" from="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons/Story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Controls/MainMenu/Columns/CenterColumn/MarginContainer/MainMenuButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="Controls/MainMenu/Columns/RightColumn/CreditsList" to="." method="_on_credits_list_mouse_entered"]
[connection signal="mouse_exited" from="Controls/MainMenu/Columns/RightColumn/CreditsList" to="." method="_on_credits_list_mouse_exited"]
[connection signal="pressed" from="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer/ConfirmButtons/Start" to="Controls/LevelSelect" method="_on_apply_pressed"]
[connection signal="pressed" from="Controls/LevelSelect/VBoxContainer/HBoxContainer/VBoxContainer/ConfirmButtons/Cancel" to="Controls/LevelSelect" method="_on_cancel_pressed"]
[connection signal="closed" from="Controls/Options/OptionsMenu" to="." method="_on_options_menu_closed"]
